feat: initial release 0.1.0 with smart routing and docker support

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
+# --- Core API Tokens (Required for Search, Universal, Tasks) ---
+# Get these from Dashboard -> Account Settings / My Account
 THORDATA_SCRAPER_TOKEN=
 THORDATA_PUBLIC_TOKEN=
 THORDATA_PUBLIC_KEY=
+
+# --- Proxy & Browser Credentials (Required for Browser Tool & Proxy Tunnel) ---
+# Get from Dashboard -> Residential Proxies -> Endpoint Generator
+# Note: Browser automation uses these same credentials by default
+THORDATA_BROWSER_USERNAME=
+THORDATA_BROWSER_PASSWORD=
+THORDATA_PROXY_HOST=pr.thordata.net
