--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,17 +4,18 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "thordata-mcp-server"
-version = "2.0.0"
-description = "Official MCP Server for Thordata. Connect LLMs to real-time web data."
+version = "0.1.0"
+description = "Official MCP Server for Thordata."
 authors = [{name = "Thordata Developer Team", email = "support@thordata.com"}]
 requires-python = ">=3.10"
 dependencies = [
     "mcp[cli]>=1.0.0",
-    "thordata-sdk>=1.3.0",
+    "thordata-sdk>=1.4.0",
     "pydantic-settings",
     "markdownify",
     "html2text",
-    "python-dotenv"
+    "python-dotenv",
+    "httpx"
 ]
 
 [project.scripts]
