--- a/smithery.yaml
+++ b/smithery.yaml
@@ -14,6 +14,12 @@ startCommand:
       THORDATA_PUBLIC_KEY:
         type: string
         description: "Public Key (Required for Task/Media Tools)"
+      THORDATA_BROWSER_USERNAME:
+        type: string
+        description: "Scraping Browser Username (Required for Browser Automation)"
+      THORDATA_BROWSER_PASSWORD:
+        type: string
+        description: "Scraping Browser Password (Required for Browser Automation)"
   commandFunction: |-
     (config) => ({
       command: 'thordata-mcp',
@@ -21,5 +27,7 @@ startCommand:
         THORDATA_SCRAPER_TOKEN: config.THORDATA_SCRAPER_TOKEN,
         THORDATA_PUBLIC_TOKEN: config.THORDATA_PUBLIC_TOKEN,
         THORDATA_PUBLIC_KEY: config.THORDATA_PUBLIC_KEY,
+        THORDATA_BROWSER_USERNAME: config.THORDATA_BROWSER_USERNAME,
+        THORDATA_BROWSER_PASSWORD: config.THORDATA_BROWSER_PASSWORD,
       }
     })
