feat: v0.2.0 production ready docker image with 100% tool coverage

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-thordata-sdk>=1.4.0
+thordata-sdk>=1.5.0
 mcp[cli]
 html2text
 python-dotenv
@@ -6,3 +6,4 @@ markdownify
 pydantic
 pydantic-settings
 httpx
+uvicorn
