--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,17 @@
-# --- Core API Tokens (Required for Search, Universal, Tasks) ---
-# Get these from Dashboard -> Account Settings / My Account
-THORDATA_SCRAPER_TOKEN=
-THORDATA_PUBLIC_TOKEN=
-THORDATA_PUBLIC_KEY=
+# Core API Tokens (Required for Search, Universal, Tasks)
+THORDATA_SCRAPER_TOKEN=your_scraper_token_here
+THORDATA_PUBLIC_TOKEN=your_public_token_here
+THORDATA_PUBLIC_KEY=your_public_key_here
 
-# --- Proxy & Browser Credentials (Required for Browser Tool & Proxy Tunnel) ---
-# Get from Dashboard -> Residential Proxies -> Endpoint Generator
-# Note: Browser automation uses these same credentials by default
-THORDATA_BROWSER_USERNAME=
-THORDATA_BROWSER_PASSWORD=
+# Proxy & Browser Credentials
+THORDATA_BROWSER_USERNAME=your_browser_username
+THORDATA_BROWSER_PASSWORD=your_browser_password
+THORDATA_RESIDENTIAL_USERNAME=your_residential_username
+THORDATA_RESIDENTIAL_PASSWORD=your_residential_password
 THORDATA_PROXY_HOST=pr.thordata.net
+
+# MCP Server Configuration
+MCP_TRANSPORT=stdio  # or 'sse' for web transport
+MCP_HOST=0.0.0.0
+MCP_PORT=8000
+LOG_LEVEL=INFO
