feat: error codes & proxy post json support

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,19 @@
-# Core API Tokens (Required for Search, Universal, Tasks)
+# Thordata MCP Server environment example
+# Copy to .env and fill with your real credentials.
+
+# ──────────────────────────────────────────────────────────────
+# Core API Tokens
+# ──────────────────────────────────────────────────────────────
 THORDATA_SCRAPER_TOKEN=your_scraper_token_here
 THORDATA_PUBLIC_TOKEN=your_public_token_here
 THORDATA_PUBLIC_KEY=your_public_key_here
 
-# Proxy & Browser Credentials
+# ──────────────────────────────────────────────────────────────
+# Browser / Proxy Credentials (choose one set)
+# ──────────────────────────────────────────────────────────────
 THORDATA_BROWSER_USERNAME=your_browser_username
 THORDATA_BROWSER_PASSWORD=your_browser_password
-THORDATA_RESIDENTIAL_USERNAME=your_residential_username
-THORDATA_RESIDENTIAL_PASSWORD=your_residential_password
-THORDATA_PROXY_HOST=pr.thordata.net
 
-# MCP Server Configuration
-MCP_TRANSPORT=stdio  # or 'sse' for web transport
-MCP_HOST=0.0.0.0
-MCP_PORT=8000
-LOG_LEVEL=INFO
+# OR use Residential proxy creds (fallback)
+THORDATA_RESIDENTIAL_USERNAME=your_resi_username
+THORDATA_RESIDENTIAL_PASSWORD=your_resi_password
